@@ -1,3 +1,8 @@
+2011-11-25  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/50408
+	* gfortran.dg/whole_file_35.f90: New.
+
 2011-11-24  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/51218
